--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<div class="form-group">
 					<p>Which optional best describes your current role?</p>
 					<select name="role" id="dropdown" required>
-						<option selected="" value="">Select current role</option>
+						<option disabled selected="" value="">Select current role</option>
 						<option value="student">Student</option>
 						<option value="job">Full Time Job</option>
 						<option value="learner">Full Time Job</option>
@@ -61,11 +61,12 @@
 					</select>
 				</div>
 				<div class="form-group">
-					<p class="text-radio">
+					<p class="text-group">
 						Would you recommend this restaurant to a friend or family
 					</p>
 					<label class="label" for="definitely">
 						<input
+							value="definitely"
 							type="radio"
 							name="user-recommend"
 							id="definitely"
@@ -73,16 +74,83 @@
 						/>Definitely
 					</label>
 					<label class="label" for="maybe">
-						<input type="radio" name="user-recommend" id="maybe" />Maybe
+						<input
+							value="maybe"
+							type="radio"
+							name="user-recommend"
+							id="maybe"
+						/>Maybe
 					</label>
 					<label class="label" for="notSure">
-						<input type="radio" name="user-recommend" id="nitsure" />Not Sure
+						<input
+							value="notSure"
+							type="radio"
+							name="user-recommend"
+							id="notSure"
+						/>Not Sure
 					</label>
 				</div>
-				<div class="form-group"></div>
-				<div class="form-group"></div>
-				<div class="form-group"></div>
-				<div class="form-group"></div>
+				<div class="form-group">
+					<p>What is your favorite menu of my restorant?</p>
+					<select name="role" id="dropdown" required>
+						<option disabled selected="" value="">Select an option</option>
+						<option value="guleKambing">Gule Kambing</option>
+						<option value="sateDaging">Sate Daging</option>
+						<option value="basoGeledek">Baso Geledek</option>
+						<option value="Somay">Somay</option>
+						<option value="Ketoprak">Ketoprak</option>
+					</select>
+				</div>
+				<div class="form-group">
+					<p class="text-group">
+						What we have to improved? (Check all that apply)
+					</p>
+					<label class="label" for="definitely">
+						<input
+							value="addSalt"
+							type="checkbox"
+							name="prefer"
+							id="addSalt"
+						/>Add Salt
+					</label>
+					<label class="label" for="maybe">
+						<input value="" type="checkbox" name="prefer" id="addOnion" />Add
+						Onion
+					</label>
+					<label class="label" for="notSure">
+						<input
+							value="LessSeasoning"
+							type="checkbox"
+							name="prefer"
+							id="nitsure"
+						/>Less Seasoning
+					</label>
+					<label class="label" for="notSure">
+						<input
+							value="services"
+							type="checkbox"
+							name="prefer"
+							id="services"
+						/>Services
+					</label>
+					<label class="label" for="notSure">
+						<input
+							value="cleanliness"
+							type="checkbox"
+							name="prefer"
+							id="cleanliness"
+						/>Cleanliness of the Place
+					</label>
+				</div>
+				<div class="form-group">
+					<p>Any comments or suggestions?</p>
+					<textarea name="comment" id="comments" cols="62" rows="7"></textarea>
+				</div>
+				<div class="form-group">
+					<button id="submit" class="submit-button" type="submit">
+						Submit
+					</button>
+				</div>
 			</form>
 		</div>
 	</body>
