--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</header>
 			<form id="survey-form">
 				<div class="form-group">
-					<label class="label-" id="name-label" for="name">Name</label>
+					<label id="name-label" for="name">Name</label>
 					<input
 						type="text"
 						name="name"
@@ -26,7 +26,7 @@
 					/>
 				</div>
 				<div class="form-group">
-					<label class="label-" id="email-label" for="email">Email</label>
+					<label id="email-label" for="email">Email</label>
 					<input
 						type="email"
 						name="email"
@@ -36,9 +36,7 @@
 					/>
 				</div>
 				<div class="form-group">
-					<label class="label-" id="number-label" for="age"
-						>Age (optional)</label
-					>
+					<label id="number-label" for="age">Age (optional)</label>
 					<input
 						type="number"
 						name="age"
@@ -50,7 +48,7 @@
 					/>
 				</div>
 				<div class="form-group">
-					<p>Which optional best describes your current role?</p>
+					<label>Which optional best describes your current role?</label>
 					<select name="role" id="dropdown" required>
 						<option disabled selected="" value="">Select current role</option>
 						<option value="student">Student</option>
@@ -64,7 +62,7 @@
 					<p class="text-group">
 						Would you recommend this restaurant to a friend or family
 					</p>
-					<label class="label" for="definitely">
+					<label for="definitely">
 						<input
 							value="definitely"
 							type="radio"
@@ -144,7 +142,7 @@
 				</div>
 				<div class="form-group">
 					<p>Any comments or suggestions?</p>
-					<textarea name="comment" id="comments" cols="55" rows="7"></textarea>
+					<textarea name="comment" id="comments"></textarea>
 				</div>
 				<div class="form-group">
 					<button id="submit" class="submit-button" type="submit">
